--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -65,7 +65,7 @@
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Register</h1>
-            <form class="form-horizontal">
+            <form class="form-horizontal col-md-9">
                 <div class="form-group">
                     <label for="inputUser" class="col-sm-2 control-label">Username</label>
                     <div class="col-sm-10">
