--- a/public/assignment/login.html
+++ b/public/assignment/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Home | Form Maker</title>
+    <title>Login | Form Maker</title>
 
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="./register.html">Register</a></li>
-                <li><a href="./login.html">Login</a></li>
+                <li class="active"><a href="#">Login <span class="sr-only">(current)</span></a></li>
                 <li><a href="./profile.html">Username</a></li>
                 <li><a href="#">Logout</a></li>
             </ul>
@@ -57,24 +57,33 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+                <li><a href="./home.html">Home</a></li>
                 <li><a href="./profile.html">Profile</a></li>
                 <li><a href="./admin.html">Admin</a></li>
                 <li><a href="./forms.html">Forms</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">Welcome!</h1>
-            <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis
-                parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.
-
-                Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper
-                nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget
-                lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.
-
-                Maecenas sed diam eget risus varius blandit sit amet non magna. Donec id elit non mi porta gravida at
-                eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec
-                elit.</p>
+            <h1 class="page-header">Login</h1>
+            <form class="form-horizontal col-md-9" action="./profile.html">
+                <div class="form-group">
+                    <label for="inputUser" class="col-sm-2 control-label">Username</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="inputUser" placeholder="Username">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputPassword" class="col-sm-2 control-label">Password</label>
+                    <div class="col-sm-10">
+                        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button type="submit" class="btn btn-primary btn-block" >Register</button>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 </div>
