Fields page halfway, add new field bar complete. Note: is it alright to use table for these entries?

--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -98,7 +98,7 @@
                                 <input type="text" class="form-control" id="inputRole"
                                        placeholder="role1, role2">
                             </td>
-                            <td class="form-group button-pair">
+                            <td class="form-group button-2">
                                 <button type="button" class="btn btn-default" aria-label="Add User">
                                     <span class="glyphicon glyphicon-plus"
                                           aria-hidden="true"></span>
@@ -114,7 +114,7 @@
                         <td>alice</td>
                         <td></td>
                         <td>student</td>
-                        <td class="form-group button-pair">
+                        <td class="form-group button-2">
                             <button type="button" class="btn btn-default" aria-label="Remove User">
                                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                             </button>
@@ -127,7 +127,7 @@
                         <td>bob</td>
                         <td></td>
                         <td>faculty | admin</td>
-                        <td class="form-group button-pair">
+                        <td class="form-group button-2">
                             <button type="button" class="btn btn-default" aria-label="Remove User">
                                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                             </button>
@@ -140,7 +140,7 @@
                         <td>charlie</td>
                         <td></td>
                         <td></td>
-                        <td class="form-group button-pair">
+                        <td class="form-group button-2">
                             <button type="button" class="btn btn-default" aria-label="Remove User">
                                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                             </button>
