--- a/public/assignment/forms.html
+++ b/public/assignment/forms.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Admin | Form Maker</title>
+    <title>Forms | Form Maker</title>
 
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
@@ -87,18 +87,18 @@
                         <form class="form-inline">
                             <tr>
                                 <td class="form-group">
-                                    <label for="inputFormName" class="sr-only">Username</label>
+                                    <label for="inputFormName" class="sr-only">Form Name</label>
                                     <input type="text" class="form-control" id="inputFormName"
-                                           placeholder="username">
+                                           placeholder="Form Name">
                                 </td>
-                                <td class="form-group button-pair">
+                                <td class="form-group button-2">
                                     <button type="button" class="btn btn-default"
-                                            aria-label="Add User">
+                                            aria-label="Add Form">
                                     <span class="glyphicon glyphicon-plus"
                                           aria-hidden="true"></span>
                                     </button>
                                     <button type="button" class="btn btn-default"
-                                            aria-label="Check User">
+                                            aria-label="Check Form">
                                         <span class="glyphicon glyphicon-ok"
                                               aria-hidden="true"></span>
                                     </button>
@@ -107,14 +107,14 @@
                         </form>
                         <tr>
                             <td>Registration Form</td>
-                            <td class="form-group button-pair">
+                            <td class="form-group button-2">
                                 <button type="button" class="btn btn-default"
-                                        aria-label="Remove User">
+                                        aria-label="Remove Form">
                                     <span class="glyphicon glyphicon-remove"
                                           aria-hidden="true"></span>
                                 </button>
                                 <button type="button" class="btn btn-default"
-                                        aria-label="Edit User">
+                                        aria-label="Edit Form">
                                     <span class="glyphicon glyphicon-pencil"
                                           aria-hidden="true"></span>
                                 </button>
@@ -122,14 +122,14 @@
                         </tr>
                         <tr>
                             <td>Contact List</td>
-                            <td class="form-group button-pair">
+                            <td class="form-group button-2">
                                 <button type="button" class="btn btn-default"
-                                        aria-label="Remove User">
+                                        aria-label="Remove Form">
                                     <span class="glyphicon glyphicon-remove"
                                           aria-hidden="true"></span>
                                 </button>
                                 <button type="button" class="btn btn-default"
-                                        aria-label="Edit User">
+                                        aria-label="Edit Form">
                                     <span class="glyphicon glyphicon-pencil"
                                           aria-hidden="true"></span>
                                 </button>
@@ -137,14 +137,14 @@
                         </tr>
                         <tr>
                             <td>To Do List</td>
-                            <td class="form-group button-pair">
+                            <td class="form-group button-2">
                                 <button type="button" class="btn btn-default"
-                                        aria-label="Remove User">
+                                        aria-label="Remove Form">
                                     <span class="glyphicon glyphicon-remove"
                                           aria-hidden="true"></span>
                                 </button>
                                 <button type="button" class="btn btn-default"
-                                        aria-label="Edit User">
+                                        aria-label="Edit Form">
                                     <span class="glyphicon glyphicon-pencil"
                                           aria-hidden="true"></span>
                                 </button>
