--- a/public/assignment/fields.html
+++ b/public/assignment/fields.html
@@ -108,6 +108,73 @@
                             </td>
                         </form>
                     </tr>
+                    <tr>
+                        <form class="form-horizontal">
+                            <td class="form-group">
+                                <label for="inputLastName1">Last Name</label>
+                                <input type="text" class="form-control" id="inputLastName1"
+                                       placeholder="Last Name">
+                            </td>
+                            <td class="button-4 form-group button-4">
+                                <button type="button" class="btn btn-default"
+                                        aria-label="Clone Field">
+                                    <span class="glyphicon glyphicon-plus"
+                                          aria-hidden="true"></span>
+                                </button>
+                                <button type="button" class="btn btn-default"
+                                        aria-label="Remove Field">
+                                    <span class="glyphicon glyphicon-remove"
+                                          aria-hidden="true"></span>
+                                </button>
+                                <button type="button" class="btn btn-default"
+                                        aria-label="Edit Field">
+                                    <span class="glyphicon glyphicon-pencil"
+                                          aria-hidden="true"></span>
+                                </button>
+                                <button type="button" class="btn btn-default"
+                                        aria-label="Reorder Field">
+                                    <span class="glyphicon glyphicon-menu-hamburger"
+                                          aria-hidden="true"></span>
+                                </button>
+                            </td>
+                        </form>
+                    </tr>
+                    <tr>
+                        <form class="form-horizontal">
+                            <td class="form-group">
+                                <label for="inputFirstName1">First Name</label>
+                                <div class="input-group">
+                                    <input type="text" class="form-control" name="datepicker"
+                                           placeholder="MM/DD/YYYY"/>
+                                    <span class="input-group-addon" name="datepicker"><span
+                                            class="glyphicon glyphicon-calendar"
+                                            aria-hidden="true"></span></span>
+                                </div>
+                            </td>
+                            <td class="button-4 form-group button-4">
+                                <button type="button" class="btn btn-default"
+                                        aria-label="Clone Field">
+                                    <span class="glyphicon glyphicon-plus"
+                                          aria-hidden="true"></span>
+                                </button>
+                                <button type="button" class="btn btn-default"
+                                        aria-label="Remove Field">
+                                    <span class="glyphicon glyphicon-remove"
+                                          aria-hidden="true"></span>
+                                </button>
+                                <button type="button" class="btn btn-default"
+                                        aria-label="Edit Field">
+                                    <span class="glyphicon glyphicon-pencil"
+                                          aria-hidden="true"></span>
+                                </button>
+                                <button type="button" class="btn btn-default"
+                                        aria-label="Reorder Field">
+                                    <span class="glyphicon glyphicon-menu-hamburger"
+                                          aria-hidden="true"></span>
+                                </button>
+                            </td>
+                        </form>
+                    </tr>
                     </tbody>
                 </table>
                 <hr class="hr-slim">
@@ -149,5 +216,29 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
         integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
         crossorigin="anonymous"></script>
+<!-- Moment.js -->
+<script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+<!-- Date Range picker -->
+<script type="text/javascript"
+        src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
+<link rel="stylesheet" type="text/css"
+      href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css"/>
+<script type="text/javascript">
+    $(function () {
+        $('span[name="datepicker"]').daterangepicker({
+                    autoUpdateInput: false,
+                    singleDatePicker: true,
+                    showDropdowns: true
+                },
+                function (start, end, label) {
+                });
+        $('span[name="datepicker"]').on('apply.daterangepicker', function (ev, picker) {
+            $('input[name="datepicker"]').val(picker.startDate.format('MM/DD/YYYY'));
+        });
+        $('span[name="datepicker"]').on('cancel.daterangepicker', function (ev, picker) {
+            $('input[name="datepicker"]').val('');
+        });
+    });
+</script>
 </body>
 </html>
