--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Assignment Home Page</title>
+    <title>Title</title>
 </head>
 <body>
-    <h1>Assignment Home Page</h1>
-    <a href="home.html">Go to home page.</a>
+<a href="login.html">Go to login page.</a>
 </body>
 </html>
