--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -4,6 +4,7 @@
     <!-- Angular Material style sheet -->
     <link rel="stylesheet"
           href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body ng-app="App" ng-cloak>
 
