--- a/public/assignment/login.html
+++ b/public/assignment/login.html
@@ -1,6 +1,6 @@
 <div layout="column" ng-cloak>
     <md-content layout-padding>
-        <h1>Login</h1>
+        <h1 class="md-headline">Login</h1>
         <form name="login">
             <md-input-container class="md-block">
                 <label>Username</label>
@@ -16,8 +16,8 @@
                     <div ng-message="required">hunter2?</div>
                 </div>
             </md-input-container>
-            <md-button class="md-primary md-raised">Login</md-button>
-            <md-button class="md-accent md-raised">Register</md-button>
+            <md-button class="md-primary md-raised alxe-button-wide">Login</md-button>
+            <md-button class="md-accent md-raised alxe-button-wide" href="#/register">Register</md-button>
         </form>
     </md-content>
 </div>
