Profile page completo

--- a/public/assignment/login.html
+++ b/public/assignment/login.html
@@ -16,7 +16,7 @@
                     <div ng-message="required">hunter2?</div>
                 </div>
             </md-input-container>
-            <md-button class="md-primary md-raised alxe-button-wide">Login</md-button>
+            <md-button class="md-primary md-raised alxe-button-wide" href="#/profile">Login</md-button>
             <md-button class="md-accent md-raised alxe-button-wide" href="#/register">Register</md-button>
         </form>
     </md-content>
