--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -23,7 +23,7 @@
                     <div ng-message="required">hunter2?</div>
                 </div>
             </md-input-container>
-            <md-button class="md-primary md-raised alxe-button-wide">Register</md-button>
+            <md-button class="md-primary md-raised alxe-button-wide" href="#/profile">Register</md-button>
             <md-button class="md-warn alxe-button-wide" href="#/login">Cancel</md-button>
         </form>
     </md-content>
