Some slight changes to the profile page

--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -30,7 +30,7 @@
                     <input type="text" name="lname" ng-model="$scope.tempLName">
                 </md-input-container>
                 <md-button class="md-primary md-raised alxe-button-wide" href="#/profile">
-                    Applications
+                    Websites
                 </md-button>
                 <md-button class="md-warn alxe-button-wide" href="#/login">Logout</md-button>
             </form>
