Website list page complete with beautiful cards interface!

--- a/public/assignment/website/website-list.html
+++ b/public/assignment/website/website-list.html
@@ -30,13 +30,62 @@
                     </md-menu-content>
                 </md-menu>
                 <h1 class="md-headline">
-                    <span>Profile</span>
+                    <span>Websites</span>
                 </h1>
                 <span flex></span>
+                <md-button class="md-icon-button" aria-label="Add Website" href="#/new">
+                    <md-icon>add</md-icon>
+                </md-button>
             </div>
         </md-toolbar>
-        <md-content flex class="md-padding">
-
-        </md-content>
+        <md-content flex class="md-padding" layout-xs="column" layout="row">
+            <div flex-xs="noshrink" flex-gt-xs="50" layout="column">
+                <md-card>
+                    <img ng-src="./img/temporary/website-ng.PNG" class="md-card-image alxe-card-img"
+                         alt="Washed Out">
+                    <md-card-title>
+                        <md-card-title-text>
+                            <span class="md-headline">Angular Material</span>
+                        </md-card-title-text>
+                    </md-card-title>
+                    <md-card-content>
+                        <p>
+                            The titles of Washed Out's breakthrough song and the first single from
+                            Paracosm share the
+                            two most important words in Ernest Greene's musical language: feel it.
+                            It's a simple request, as well...
+                        </p>
+                    </md-card-content>
+                    <md-card-actions layout="row" layout-align="center">
+                        <md-button class="md-icon-button md-warn" aria-label="Delete">
+                            <md-icon>delete</md-icon>
+                        </md-button>
+                        <span flex></span>
+                        <md-button class="md-icon-button" aria-label="Edit" href="#/edit">
+                            <md-icon>settings</md-icon>
+                        </md-button>
+                    </md-card-actions>
+                </md-card>
+            </div>
+            <div flex-xs="noshrink" flex-gt-xs="50" layout="column">
+                <md-card>
+                    <img ng-src="./img/temporary/website-ng.PNG" class="md-card-image alxe-card-img"
+                         alt="Washed Out">
+                    <md-card-title>
+                        <md-card-title-text>
+                            <span class="md-headline">Angular Material</span>
+                        </md-card-title-text>
+                    </md-card-title>
+                    <md-card-actions layout="row" layout-align="center">
+                        <md-button class="md-icon-button md-warn" aria-label="Delete">
+                            <md-icon>delete</md-icon>
+                        </md-button>
+                        <span flex></span>
+                        <md-button class="md-icon-button" aria-label="Edit" href="#/edit">
+                            <md-icon>settings</md-icon>
+                        </md-button>
+                    </md-card-actions>
+                </md-card>
+            </div>
     </md-content>
 </div>
