--- a/public/assignment/website/website-list.html
+++ b/public/assignment/website/website-list.html
@@ -41,8 +41,11 @@
         <md-content flex class="md-padding" layout-xs="column" layout="row">
             <div flex-xs="noshrink" flex-gt-xs="50" layout="column">
                 <md-card>
-                    <img ng-src="./img/temporary/website-ng.PNG" class="md-card-image alxe-card-img"
-                         alt="Washed Out">
+                    <md-button href="#/websites/web1">
+                        <img ng-src="./img/temporary/website-ng.PNG"
+                             class="md-card-image alxe-card-img"
+                             alt="Washed Out">
+                    </md-button>
                     <md-card-title>
                         <md-card-title-text>
                             <span class="md-headline">Angular Material</span>
@@ -87,5 +90,5 @@
                     </md-card-actions>
                 </md-card>
             </div>
-    </md-content>
+        </md-content>
 </div>
