Some fixes to the website list, added a few more examples too. Work on the new website page. One issue that needs to be revisited is angular material does not currently properly handle textarea and its number of rows. Hopefully that will be fixed in the next update...

--- a/public/assignment/website/list.html
+++ b/public/assignment/website/list.html
@@ -40,8 +40,8 @@
         </md-toolbar>
         <md-content flex class="md-padding" layout-xs="column" layout="row">
             <div flex-xs="noshrink" flex-gt-xs="50" layout="column">
-                <md-card>
-                    <md-button href="#/websites/web1">
+                <md-card flex="none">
+                    <md-button href="#/websites/web1/pages" class="alxe-button-image">
                         <img ng-src="./img/temporary/website-ng.PNG"
                              class="md-card-image alxe-card-img"
                              alt="Washed Out">
@@ -64,16 +64,17 @@
                             <md-icon>delete</md-icon>
                         </md-button>
                         <span flex></span>
-                        <md-button class="md-icon-button" aria-label="Edit" href="#/edit">
+                        <md-button class="md-icon-button" aria-label="Edit" href="#/websites/web1/edit">
                             <md-icon>settings</md-icon>
                         </md-button>
                     </md-card-actions>
                 </md-card>
-            </div>
-            <div flex-xs="noshrink" flex-gt-xs="50" layout="column">
-                <md-card>
-                    <img ng-src="./img/temporary/website-ng.PNG" class="md-card-image alxe-card-img"
-                         alt="Washed Out">
+                <md-card flex="none">
+                    <md-button href="#/websites/web1/pages" class="alxe-button-image">
+                        <img ng-src="./img/temporary/website-ng.PNG"
+                             class="md-card-image alxe-card-img"
+                             alt="Washed Out">
+                    </md-button>
                     <md-card-title>
                         <md-card-title-text>
                             <span class="md-headline">Angular Material</span>
@@ -84,7 +85,51 @@
                             <md-icon>delete</md-icon>
                         </md-button>
                         <span flex></span>
-                        <md-button class="md-icon-button" aria-label="Edit" href="#/edit">
+                        <md-button class="md-icon-button" aria-label="Edit" href="#/websites/web1/edit">
+                            <md-icon>settings</md-icon>
+                        </md-button>
+                    </md-card-actions>
+                </md-card>
+            </div>
+            <div flex-xs="noshrink" flex-gt-xs="50" layout="column">
+                <md-card flex="none">
+                    <md-button href="#/websites/web1/pages" class="alxe-button-image">
+                        <img ng-src="./img/temporary/website-ng.PNG"
+                             class="md-card-image alxe-card-img"
+                             alt="Washed Out">
+                    </md-button>
+                    <md-card-title>
+                        <md-card-title-text>
+                            <span class="md-headline">Angular Material</span>
+                        </md-card-title-text>
+                    </md-card-title>
+                    <md-card-actions layout="row" layout-align="center">
+                        <md-button class="md-icon-button md-warn" aria-label="Delete">
+                            <md-icon>delete</md-icon>
+                        </md-button>
+                        <span flex></span>
+                        <md-button class="md-icon-button" aria-label="Edit" href="#/websites/web1/edit">
+                            <md-icon>settings</md-icon>
+                        </md-button>
+                    </md-card-actions>
+                </md-card>
+                <md-card flex="none">
+                    <md-button href="#/websites/web1/pages" class="alxe-button-image">
+                        <img ng-src="./img/temporary/website-ng.PNG"
+                             class="md-card-image alxe-card-img"
+                             alt="Washed Out">
+                    </md-button>
+                    <md-card-title>
+                        <md-card-title-text>
+                            <span class="md-headline">Angular Material</span>
+                        </md-card-title-text>
+                    </md-card-title>
+                    <md-card-actions layout="row" layout-align="center">
+                        <md-button class="md-icon-button md-warn" aria-label="Delete">
+                            <md-icon>delete</md-icon>
+                        </md-button>
+                        <span flex></span>
+                        <md-button class="md-icon-button" aria-label="Edit" href="#/websites/web1/edit">
                             <md-icon>settings</md-icon>
                         </md-button>
                     </md-card-actions>
