A few slight fixes, and new website page complete

--- a/public/assignment/website/list.html
+++ b/public/assignment/website/list.html
@@ -41,7 +41,8 @@
         <md-content flex class="md-padding" layout-xs="column" layout="row">
             <div flex-xs="noshrink" flex-gt-xs="50" layout="column">
                 <md-card flex="none">
-                    <md-button href="#/websites/web1/pages" class="alxe-button-image">
+                    <md-button href="#/websites/web1/pages" class="alxe-button-image"
+                               aria-label="Edit Pages">
                         <img ng-src="./img/temporary/website-ng.PNG"
                              class="md-card-image alxe-card-img"
                              alt="Washed Out">
@@ -64,7 +65,8 @@
                             <md-icon>delete</md-icon>
                         </md-button>
                         <span flex></span>
-                        <md-button class="md-icon-button" aria-label="Edit" href="#/websites/web1/edit">
+                        <md-button class="md-icon-button" aria-label="Edit"
+                                   href="#/websites/web1/edit">
                             <md-icon>settings</md-icon>
                         </md-button>
                     </md-card-actions>
@@ -85,7 +87,8 @@
                             <md-icon>delete</md-icon>
                         </md-button>
                         <span flex></span>
-                        <md-button class="md-icon-button" aria-label="Edit" href="#/websites/web1/edit">
+                        <md-button class="md-icon-button" aria-label="Edit"
+                                   href="#/websites/web1/edit">
                             <md-icon>settings</md-icon>
                         </md-button>
                     </md-card-actions>
@@ -108,7 +111,8 @@
                             <md-icon>delete</md-icon>
                         </md-button>
                         <span flex></span>
-                        <md-button class="md-icon-button" aria-label="Edit" href="#/websites/web1/edit">
+                        <md-button class="md-icon-button" aria-label="Edit"
+                                   href="#/websites/web1/edit">
                             <md-icon>settings</md-icon>
                         </md-button>
                     </md-card-actions>
@@ -129,7 +133,8 @@
                             <md-icon>delete</md-icon>
                         </md-button>
                         <span flex></span>
-                        <md-button class="md-icon-button" aria-label="Edit" href="#/websites/web1/edit">
+                        <md-button class="md-icon-button" aria-label="Edit"
+                                   href="#/websites/web1/edit">
                             <md-icon>settings</md-icon>
                         </md-button>
                     </md-card-actions>
