--- a/public/assignment/website/new.html
+++ b/public/assignment/website/new.html
@@ -45,13 +45,9 @@
                     <label>Description</label>
                     <textarea ng-model="$scope.tempDesc" class="alxe-textarea-3row"></textarea>
                 </md-input-container>
-                <md-button class="md-accent md-raised alxe-button-wide" href="#/profile">
-                    Save (Only show when there are changes)
-                </md-button>
-                <md-button class="md-primary md-raised alxe-button-wide" href="#/sites">
-                    Websites
-                </md-button>
-                <md-button class="md-warn alxe-button-wide" href="#/login">Logout</md-button>
+                <md-button class="md-primary md-raised alxe-button-wide"
+                           href="#/websites/web1/pages">Save</md-button>
+                <md-button class="md-warn alxe-button-wide" href="#/sites">Cancel</md-button>
             </form>
         </md-content>
     </md-content>
