Edit page completo

--- a/public/assignment/website/edit.html
+++ b/public/assignment/website/edit.html
@@ -1,10 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div layout="row" ng-cloak>
+    <md-content layout="column" layout-fill>
+        <md-toolbar>
+            <div class="md-toolbar-tools alxe-toolbar-withlefticon">
+                <md-menu ng-controller="MenuCtrl as ctrl" md-offset="0 40">
+                    <md-button aria-label="Open menu" class="md-icon-button"
+                               ng-click="ctrl.openMenu($mdOpenMenu, $event)">
+                        <md-icon md-menu-origin>menu</md-icon>
+                    </md-button>
+                    <md-menu-content width="4">
+                        <md-menu-item>
+                            <md-button href="#/profile">
+                                <md-icon>person</md-icon>
+                                Profile
+                            </md-button>
+                        </md-menu-item>
+                        <md-menu-item>
+                            <md-button href="#/sites">
+                                <md-icon>apps</md-icon>
+                                Websites
+                            </md-button>
+                        </md-menu-item>
+                        <md-menu-divider></md-menu-divider>
+                        <md-menu-item>
+                            <md-button class="md-warn" href="#/login">
+                                <md-icon>close</md-icon>
+                                Logout
+                            </md-button>
+                        </md-menu-item>
+                    </md-menu-content>
+                </md-menu>
+                <h1 class="md-headline">
+                    <span>Edit {{title}}</span>
+                </h1>
+                <span flex></span>
+            </div>
+        </md-toolbar>
+        <md-content flex class="md-padding">
+            <form name="newsite">
+                <md-input-container class="md-block">
+                    <label>Title</label>
+                    <input type="text" name="title" ng-model="$scope.tempTitle">
+                </md-input-container>
+                <md-input-container class="md-block">
+                    <label>Description</label>
+                    <textarea ng-model="$scope.tempDesc" class="alxe-textarea-3row"></textarea>
+                </md-input-container>
+                <md-button class="md-primary md-raised alxe-button-wide"
+                           href="#/websites/web1/pages">Save</md-button>
+                <md-button class="md-warn alxe-button-wide" href="#/sites">Cancel</md-button>
+            </form>
+        </md-content>
+    </md-content>
+</div>
