--- a/public/assignment/website/list.html
+++ b/public/assignment/website/list.html
@@ -66,7 +66,7 @@
                         </md-button>
                         <span flex></span>
                         <md-button class="md-icon-button" aria-label="Edit"
-                                   href="#/websites/web1/edit">
+                                   href="#/website/web1/edit">
                             <md-icon>settings</md-icon>
                         </md-button>
                     </md-card-actions>
