Some general housekeeping and fixes before release

--- a/public/assignment/website/edit.html
+++ b/public/assignment/website/edit.html
@@ -46,7 +46,7 @@
                     <textarea ng-model="$scope.tempDesc" class="alxe-textarea-3row"></textarea>
                 </md-input-container>
                 <md-button class="md-primary md-raised alxe-button-wide"
-                           href="#/websites/web1/pages">Save</md-button>
+                           href="#/websites/web1">Save</md-button>
                 <md-button class="md-warn alxe-button-wide" href="#/sites">Cancel</md-button>
             </form>
         </md-content>
