--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -43,7 +43,7 @@
                 </md-input-container>
                 <md-input-container class="md-block">
                     <label>Email</label>
-                    <input type="text" name="email" ng-model="$scope.tempEmail">
+                    <input type="email" name="email" ng-model="$scope.tempEmail">
                 </md-input-container>
                 <md-input-container class="md-block">
                     <label>First Name</label>
