--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -22,7 +22,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-route.js"></script>
 <!-- Angular Material Library -->
 <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
-<script src="js/app.js"></script>
+<script src="app/app.js"></script>
 
 </body>
 </html>
