--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -23,6 +23,8 @@
 <!-- Angular Material Library -->
 <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 <script src="app/app.js"></script>
+<script src="app/appConfig.js"></script>
+<script src="app/controllers/common/MenuCtrl.js"></script>
 
 </body>
 </html>
