--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -24,7 +24,11 @@
 <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 <script src="app/app.js"></script>
 <script src="app/appConfig.js"></script>
+<!-- Services -->
+<script src="app/services/User.js"></script>
+<!-- Controllers -->
 <script src="app/controllers/common/MenuCtrl.js"></script>
+<script src="app/controllers/user/LoginCtrl.js"></script>
 
 </body>
 </html>
