RegisterCtrl complete, hopefully

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -29,6 +29,7 @@
 <!-- Controllers -->
 <script src="app/controllers/common/MenuCtrl.js"></script>
 <script src="app/controllers/user/LoginCtrl.js"></script>
+<script src="app/controllers/user/RegisterCtrl.js"></script>
 
 </body>
 </html>
