--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -30,6 +30,7 @@
 <script src="app/controllers/common/MenuCtrl.js"></script>
 <script src="app/controllers/user/LoginCtrl.js"></script>
 <script src="app/controllers/user/RegisterCtrl.js"></script>
+<script src="app/controllers/user/ProfileCtrl.js"></script>
 
 </body>
 </html>
