Website service complete!

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -26,6 +26,7 @@
 <script src="app/appConfig.js"></script>
 <!-- Services -->
 <script src="app/services/User.js"></script>
+<script src="app/services/Website.js"></script>
 <!-- Controllers -->
 <script src="app/controllers/common/MenuCtrl.js"></script>
 <script src="app/controllers/user/LoginCtrl.js"></script>
