--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -32,6 +32,7 @@
 <script src="app/controllers/user/LoginCtrl.js"></script>
 <script src="app/controllers/user/RegisterCtrl.js"></script>
 <script src="app/controllers/user/ProfileCtrl.js"></script>
+<script src="app/controllers/website/WebsiteListCtrl.js"></script>
 
 </body>
 </html>
