WebsiteNewCtrl completed! Also changed the menu links for a fair number of the sites

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -33,6 +33,7 @@
 <script src="app/controllers/user/RegisterCtrl.js"></script>
 <script src="app/controllers/user/ProfileCtrl.js"></script>
 <script src="app/controllers/website/WebsiteListCtrl.js"></script>
+<script src="app/controllers/website/WebsiteNewCtrl.js"></script>
 
 </body>
 </html>
