WebsiteEditCtrl complete! Also reworked the page titles up to the page directory

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -34,6 +34,7 @@
 <script src="app/controllers/user/ProfileCtrl.js"></script>
 <script src="app/controllers/website/WebsiteListCtrl.js"></script>
 <script src="app/controllers/website/WebsiteNewCtrl.js"></script>
+<script src="app/controllers/website/WebsiteEditCtrl.js"></script>
 
 </body>
 </html>
