PageNewCtrl complete! Also added a page's title to its card

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -37,6 +37,7 @@
 <script src="app/controllers/website/WebsiteNewCtrl.js"></script>
 <script src="app/controllers/website/WebsiteEditCtrl.js"></script>
 <script src="app/controllers/page/PageListCtrl.js"></script>
+<script src="app/controllers/page/PageNewCtrl.js"></script>
 
 </body>
 </html>
