--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -38,6 +38,6 @@
 <script src="app/controllers/website/WebsiteEditCtrl.js"></script>
 <script src="app/controllers/page/PageListCtrl.js"></script>
 <script src="app/controllers/page/PageNewCtrl.js"></script>
-
+<script src="app/controllers/page/PageEditCtrl.js"></script>
 </body>
 </html>
