Widget service complete!

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -28,6 +28,7 @@
 <script src="app/services/User.js"></script>
 <script src="app/services/Website.js"></script>
 <script src="app/services/Page.js"></script>
+<script src="app/services/Widget.js"></script>
 <!-- Controllers -->
 <script src="app/controllers/common/MenuCtrl.js"></script>
 <script src="app/controllers/user/LoginCtrl.js"></script>
