WidgetListCtrl pretty much complete(for now). Still need to figure out the drag/drop of the widgets

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -40,5 +40,6 @@
 <script src="app/controllers/page/PageListCtrl.js"></script>
 <script src="app/controllers/page/PageNewCtrl.js"></script>
 <script src="app/controllers/page/PageEditCtrl.js"></script>
+<script src="app/controllers/widget/WidgetListCtrl.js"></script>
 </body>
 </html>
