WidgetEditCtrl completed! Still have to change some of the edit views though...

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -41,5 +41,6 @@
 <script src="app/controllers/page/PageNewCtrl.js"></script>
 <script src="app/controllers/page/PageEditCtrl.js"></script>
 <script src="app/controllers/widget/WidgetListCtrl.js"></script>
+<script src="app/controllers/widget/WidgetEditCtrl.js"></script>
 </body>
 </html>
