--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -42,5 +42,6 @@
 <script src="app/controllers/page/PageEditCtrl.js"></script>
 <script src="app/controllers/widget/WidgetListCtrl.js"></script>
 <script src="app/controllers/widget/WidgetEditCtrl.js"></script>
+<script src="app/controllers/widget/WidgetNewCtrl.js"></script>
 </body>
 </html>
