--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -14,6 +14,10 @@
 
 <div ng-view></div>
 
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
+<script src="https://code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
 <!-- Angular Material requires Angular.js Libraries -->
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
@@ -34,6 +38,8 @@
 <script src='app/libraries/textAngular-rangy.min.js'></script>
 <script src='app/libraries/textAngular-sanitize.min.js'></script>
 <script src='app/libraries/textAngular.min.js'></script>
+<!-- ng-ui-sortable Library -->
+<script src='app/libraries/sortable.min.js'></script>
 <!-- Services -->
 <script src="app/services/User.js"></script>
 <script src="app/services/Website.js"></script>
